--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
         "api-skeletons/doctrine-criteria": "^2.0.3",
         "doctrine/instantiator": "^1.3.1",
         "doctrine/collections": "^1.6.6",
-        "doctrine/common": "^2.13.3",
+        "doctrine/common": "^3.0.0",
         "laminas/laminas-config": "^3.3",
-        "laminas/laminas-hydrator": "^2.4.2",
-        "laminas/laminas-dependency-plugin": "^1.0.4",
+        "laminas/laminas-hydrator": "^3.2 || ^4.0.1",
+        "laminas/laminas-dependency-plugin": "^2.0.0",
         "laminas/laminas-modulemanager": "^2.8.4",
         "laminas/laminas-mvc-console": "^1.2",
         "laminas-api-tools/api-tools-doctrine-querybuilder": "^1.8",
